--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "@material-ui/core": "^4.12.3",
+        "material-ui": "^0.20.2"
     }
 }
