--- a/front/package.json
+++ b/front/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/styles": "^4.11.4",
+    "@mui/icons-material": "^5.6.0",
     "@mui/material": "^5.5.2",
     "@mui/styled-engine": "^5.5.2",
     "@mui/styled-engine-sc": "^5.5.2",
@@ -21,8 +22,10 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
