--- a/front/package.json
+++ b/front/package.json
@@ -18,6 +18,7 @@
     "formik": "^2.2.9",
     "material-ui-colors": "^1.0.0",
     "react": "^17.0.2",
+    "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
