--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     },
     "dependencies": {
         "@material-ui/core": "^4.12.3",
-        "material-ui": "^0.20.2"
+        "material-ui": "^0.20.2",
+        "react-slick": "^0.29.0",
+        "slick-carousel": "^1.8.1"
     }
 }
