--- a/front/package.json
+++ b/front/package.json
@@ -15,11 +15,17 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
     "material-ui-colors": "^1.0.0",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
+    "react-bootstrap": "^2.3.1",
+    "react-bootstrap-carousel": "^4.1.1",
+    "react-bootstrap-validation": "^0.1.11",
+    "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
+    "react-image-gallery": "^1.2.8",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
