--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "dependencies": {
         "@material-ui/core": "^4.12.3",
         "material-ui": "^0.20.2",
+        "react-bootstrap": "^2.3.1",
+        "react-bootstrap-carousel": "^4.1.1",
+        "react-icons": "^4.3.1",
         "react-slick": "^0.29.0",
         "slick-carousel": "^1.8.1"
     }
